# python-annotate

./: CLAUDE.md  README.md  pyproject.toml
.specify/extensions/: .registry
src/refactory_annotate/: __init__.py  cli.py  cst_annotator.py  location_finder.py  models.py  mypy_verifier.py  pipeline.py  pyright_lsp.py
tests/: test_cli.py  test_pipeline.py
