[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refactory-annotate"
version = "0.1.0"
description = "Type inference CLI for Refactory — infers types via pyright, inserts PEP 484 annotations, verifies with mypy --strict"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Refactory", email = "dev@refactory.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "pyright>=1.1",
    "mypy>=1.0",
    "libcst>=1.0",
]

[project.scripts]
refactory-annotate = "refactory_annotate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/refactory_annotate"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
